--- a/ecourseapiv1/requirements.txt
+++ b/ecourseapiv1/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.39.0
 cryptography==42.0.5
-Django==5.0.3
+Django==4.2.11
+django-bootstrap-v5==1.0.11
 django-ckeditor==6.7.1
 django-filter==24.2
 django-js-asset==2.2.0
@@ -24,6 +26,7 @@ PyYAML==6.0.1
 requests==2.31.0
 setuptools==69.2.0
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 typing_extensions==4.10.0
 tzdata==2024.1
