--- a/ecourseapiv1/requirements.txt
+++ b/ecourseapiv1/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cloudinary==1.39.0
 cryptography==42.0.5
+DateTime==5.5
 Django==4.2.11
 django-bootstrap-v5==1.0.11
 django-ckeditor==6.7.1
@@ -13,10 +14,13 @@ django-js-asset==2.2.0
 django-oauth-toolkit==2.3.0
 djangorestframework==3.15.0
 drf-yasg==1.21.7
+expo==0.1.2
 idna==3.6
 inflection==0.5.1
 jwcrypto==1.5.6
+npm==0.1.1
 oauthlib==3.2.2
+optional-django==0.1.0
 packaging==24.0
 pillow==10.2.0
 pycparser==2.22
@@ -32,3 +36,4 @@ typing_extensions==4.10.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+zope.interface==6.3
