--- a/ecourseapiv1/ReactNativeEcommerceApp/app.json
+++ b/ecourseapiv1/ReactNativeEcommerceApp/app.json
@@ -5,7 +5,8 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "plugins": ["expo-image-picker"]
   },
   "name": "ReactNativeEcommerceApp"
 }
