--- a/ecourseapiv1/ReactNativeEcommerceApp/package.json
+++ b/ecourseapiv1/ReactNativeEcommerceApp/package.json
@@ -9,14 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.7.6",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@types/react-native": "^0.70.19",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.73.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.1"
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tooltip": "^5.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
