--- a/ecourseapiv1/ReactNativeEcommerceApp/package.json
+++ b/ecourseapiv1/ReactNativeEcommerceApp/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-gifted-chat": "^2.4.0",
