--- a/ecourseapiv1/requirements.txt
+++ b/ecourseapiv1/requirements.txt
@@ -12,6 +12,7 @@ DateTime==5.5
 Django==4.2.11
 django-bootstrap-v5==1.0.11
 django-ckeditor==6.7.1
+django-cors-headers==4.3.1
 django-enum-choices==2.1.4
 django-filter==24.2
 django-js-asset==2.2.0
